@@ -18,45 +18,47 @@
 package org.jackhuang.hmcl.addon.repository;
 
 import com.google.gson.reflect.TypeToken;
+import org.jackhuang.hmcl.addon.AddonLoader;
 import org.jackhuang.hmcl.addon.RemoteAddon;
 import org.jackhuang.hmcl.addon.RemoteAddonRepository;
-import org.jackhuang.hmcl.addon.mod.ModLoaderType;
 import org.jackhuang.hmcl.download.DownloadProvider;
 import org.jackhuang.hmcl.util.Immutable;
 import org.jackhuang.hmcl.util.MurmurHash2;
-import org.jackhuang.hmcl.util.Pair;
 import org.jackhuang.hmcl.util.StringUtils;
-import org.jackhuang.hmcl.util.io.HttpRequest;
-import org.jackhuang.hmcl.util.io.JarUtils;
-import org.jackhuang.hmcl.util.io.NetworkUtils;
+import org.jackhuang.hmcl.util.io.*;
 import org.jackhuang.hmcl.util.versioning.GameVersionNumber;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.io.ByteArrayOutputStream;
+import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.URI;
+import java.nio.ByteBuffer;
+import java.nio.channels.SeekableByteChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.Semaphore;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import java.util.zip.Checksum;
 
 import static org.jackhuang.hmcl.util.Lang.mapOf;
 import static org.jackhuang.hmcl.util.Pair.pair;
 import static org.jackhuang.hmcl.util.gson.JsonUtils.listTypeOf;
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
+/// @see <a href="https://docs.curseforge.com/rest-api">CurseForge API Doc</a>
 public final class CurseForgeRemoteAddonRepository implements RemoteAddonRepository {
 
     private static final String PREFIX = "https://api.curseforge.com";
+    private static final String BASE = "https://www.curseforge.com";
     private static final Semaphore SEMAPHORE = new Semaphore(16);
+    private static final int DEFAULT_RETRY_COUNT = 3;
 
     public static final String API_KEY = System.getProperty("hmcl.curseforge.apikey", JarUtils.getAttribute("hmcl.curseforge.apikey", ""));
-
-    private static final int WORD_PERFECT_MATCH_WEIGHT = 5;
 
     private static <R extends HttpRequest> R withApiKey(R request) {
         if (request.getUrl().startsWith(PREFIX) && !API_KEY.isEmpty()) {
@@ -69,46 +71,67 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
         return !API_KEY.isEmpty();
     }
 
-    private final Type type;
+    private final @Nullable RemoteAddon.Type type;
     private final int section;
 
-    public CurseForgeRemoteAddonRepository(Type type, int section) {
-        this.type = type;
+    public CurseForgeRemoteAddonRepository() {
+        this.type = null;
+        this.section = -1;
+    }
+
+    public CurseForgeRemoteAddonRepository(int section) {
+        this.type = toAddonType(section);
+        if (type == null) throw new IllegalArgumentException("Unsupported CurseForge section id: " + section);
         this.section = section;
     }
 
     @Override
-    public Type getType() {
+    public RemoteAddon.Type getType() {
+        if (type == null) throw new UnsupportedOperationException();
         return type;
     }
 
-    private int toModsSearchSortField(SortType sort) {
-        // https://docs.curseforge.com/#tocS_ModsSearchSortField
+    @Override
+    public String getApiBaseUrl() {
+        return PREFIX;
+    }
+
+    @Override
+    public String getBaseUrl() {
+        return BASE;
+    }
+
+    private static int toModsSearchSortField(SortType sort) {
+        // https://docs.curseforge.com/rest-api/#tocS_ModsSearchSortField
         return switch (sort) {
-            case DATE_CREATED -> 1;
+            case RELEVANCY -> 1; // This represents Featured, however test shows that they are quite similar
             case POPULARITY -> 2;
+            case DATE_CREATED -> 11;
             case LAST_UPDATED -> 3;
-            case NAME -> 4;
-            case AUTHOR -> 5;
             case TOTAL_DOWNLOADS -> 6;
-            default -> 8;
         };
     }
 
-    private String toSortOrder(SortOrder sortOrder) {
-        // https://docs.curseforge.com/#tocS_SortOrder
+    private static String toSortOrder(SortOrder sortOrder) {
+        // https://docs.curseforge.com/rest-api/#tocS_SortOrder
         return switch (sortOrder) {
             case ASC -> "asc";
             case DESC -> "desc";
         };
     }
 
-    private int calculateTotalPages(Response<List<CurseAddon>> response, int pageSize) {
+    private static int calculateTotalPages(Response<List<CurseAddon>> response, int pageSize) {
         return (int) Math.ceil((double) Math.min(response.pagination.totalCount, 10000) / pageSize);
     }
 
+    /// Searches the configured section, preserving the order returned by the server.
+    ///
+    /// @throws UnsupportedOperationException if this repository has no configured section
+    /// @throws NoCandidatesException         if no response is obtained and no I/O failure was recorded
+    /// @throws IOException                   if all candidate requests fail with I/O errors
     @Override
     public SearchResult search(DownloadProvider downloadProvider, String gameVersion, @Nullable RemoteAddonRepository.Category category, int pageOffset, int pageSize, String searchFilter, SortType sortType, SortOrder sortOrder) throws IOException {
+        if (type == null) throw new UnsupportedOperationException();
         SEMAPHORE.acquireUninterruptibly();
         try {
             int categoryId = 0;
@@ -128,18 +151,16 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
             query.put("index", Integer.toString(pageOffset * pageSize));
             query.put("pageSize", Integer.toString(pageSize));
 
-            Response<List<CurseAddon>> response = null;
+            @Nullable Response<List<CurseAddon>> response = null;
 
-            IOException exception = null;
+            @Nullable IOException exception = null;
             List<URI> candidates = downloadProvider.injectURLWithCandidates(NetworkUtils.withQuery(PREFIX + "/v1/mods/search", query));
             for (URI candidate : candidates) {
                 LOG.info("Fetching " + candidate);
                 try {
                     response = withApiKey(HttpRequest.GET(candidate.toString()))
+                            .retry(DEFAULT_RETRY_COUNT)
                             .getJson(Response.typeOf(listTypeOf(CurseAddon.class)));
-                    if (searchFilter.isEmpty()) {
-                        return new SearchResult(response.data().stream().map(addon -> addon.toMod(type)), calculateTotalPages(response, pageSize));
-                    }
                     break;
                 } catch (IOException e) {
                     LOG.warning("Failed to search addons: " + candidate, e);
@@ -154,53 +175,74 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
                 }
             }
 
-            if (response == null) {
-                throw exception != null ? exception : new IOException("No candidates found");
-            }
+            if (response != null)
+                return new SearchResult(response.data().stream().map(CurseAddon::toAddon), calculateTotalPages(response, pageSize));
 
-            // https://github.com/HMCL-dev/HMCL/issues/1549
-            String lowerCaseSearchFilter = searchFilter.toLowerCase(Locale.ROOT);
-            Map<String, Integer> searchFilterWords = new HashMap<>();
-            for (String s : StringUtils.tokenize(lowerCaseSearchFilter)) {
-                searchFilterWords.put(s, searchFilterWords.getOrDefault(s, 0) + 1);
-            }
-
-            StringUtils.LevCalculator levCalculator = new StringUtils.LevCalculator();
-
-            return new SearchResult(response.data().stream().map(addon -> addon.toMod(type)).map(remoteMod -> {
-                String lowerCaseResult = remoteMod.title().toLowerCase(Locale.ROOT);
-                int diff = levCalculator.calc(lowerCaseSearchFilter, lowerCaseResult);
-
-                for (String s : StringUtils.tokenize(lowerCaseResult)) {
-                    if (searchFilterWords.containsKey(s)) {
-                        diff -= WORD_PERFECT_MATCH_WEIGHT * searchFilterWords.get(s) * s.length();
-                    }
-                }
-
-                return pair(remoteMod, diff);
-            }).sorted(Comparator.comparingInt(Pair::getValue)).map(Pair::getKey), response.data().stream().map(addon -> addon.toMod(type)), calculateTotalPages(response, pageSize));
+            throw exception != null ? exception : new NoCandidatesException();
         } finally {
             SEMAPHORE.release();
         }
     }
 
-    @Override
-    public Optional<RemoteAddon.Version> getRemoteVersionByLocalFile(Path file) throws IOException {
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        try (InputStream stream = Files.newInputStream(file)) {
-            byte[] buf = new byte[1024];
-            int len;
-            while ((len = stream.read(buf, 0, buf.length)) != -1) {
+    /// Calculates the CurseForge fingerprint without retaining the filtered file in memory.
+    static long calculateFingerprint(Path file) throws IOException {
+        try (SeekableByteChannel channel = Files.newByteChannel(file, StandardOpenOption.READ)) {
+            long startPosition = channel.position();
+
+            byte[] bufferArray = new byte[1024 * 1024];
+            ByteBuffer buffer = ByteBuffer.wrap(bufferArray);
+
+            long filteredLength = 0;
+            while (channel.read(buffer) > 0) {
+                int len = buffer.position();
                 for (int i = 0; i < len; i++) {
-                    byte b = buf[i];
+                    byte b = bufferArray[i];
                     if (b != 0x9 && b != 0xa && b != 0xd && b != 0x20) {
-                        baos.write(b);
+                        filteredLength++;
                     }
                 }
+                buffer.clear();
             }
-        }
 
-        long hash = Integer.toUnsignedLong(MurmurHash2.hash32(baos.toByteArray(), baos.size(), 1));
+            channel.position(startPosition);
+
+            Checksum hasher = MurmurHash2.hash32(filteredLength, 1);
+            while (channel.read(buffer) > 0) {
+                int len = buffer.position();
+
+                int pos = 0;
+                while (pos < len) {
+                    byte b = bufferArray[pos];
+                    if (b == 0x9 || b == 0xa || b == 0xd || b == 0x20) {
+                        break;
+                    }
+                    pos++;
+                }
+
+                if (pos < len) {
+                    int pos2 = pos + 1;
+                    while (pos2 < len) {
+                        byte b = bufferArray[pos2];
+                        if (b != 0x9 && b != 0xa && b != 0xd && b != 0x20) {
+                            bufferArray[pos++] = b;
+                        }
+                        pos2++;
+                    }
+                }
+
+                hasher.update(bufferArray, 0, pos);
+                buffer.clear();
+            }
+            return hasher.getValue();
+        } catch (IllegalArgumentException | IllegalStateException e) {
+            throw new IOException(e);
+        }
+    }
+
+    /// Finds the remote CurseForge version matching a local file.
+    @Override
+    public Optional<RemoteAddon.Version> getRemoteVersionByLocalFile(Path file) throws IOException {
+        long hash = calculateFingerprint(file);
         if (hash == 811513880) { // Workaround for https://github.com/HMCL-dev/HMCL/issues/4597
             return Optional.empty();
         }
@@ -209,6 +251,7 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
         try {
             Response<FingerprintMatchesResult> response = withApiKey(HttpRequest.POST(PREFIX + "/v1/fingerprints/432"))
                     .json(mapOf(pair("fingerprints", Collections.singletonList(hash))))
+                    .retry(DEFAULT_RETRY_COUNT)
                     .getJson(Response.typeOf(FingerprintMatchesResult.class));
 
             if (response.data().exactMatches() == null || response.data().exactMatches().isEmpty()) {
@@ -222,22 +265,37 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
     }
 
     @Override
-    public RemoteAddon getModById(DownloadProvider downloadProvider, String id) throws IOException {
+    public RemoteAddon getAddonById(DownloadProvider downloadProvider, String id) throws IOException {
         SEMAPHORE.acquireUninterruptibly();
         try {
             Response<CurseAddon> response = withApiKey(HttpRequest.GET(PREFIX + "/v1/mods/" + id))
+                    .retry(DEFAULT_RETRY_COUNT)
                     .getJson(Response.typeOf(CurseAddon.class));
-            return response.data.toMod(type);
+            return response.data.toAddon();
         } finally {
             SEMAPHORE.release();
         }
     }
 
     @Override
-    public RemoteAddon.File getModFile(String modId, String fileId) throws IOException {
+    public RemoteAddon resolveDependency(DownloadProvider downloadProvider, String id) throws IOException {
+        try {
+            return getAddonById(downloadProvider, id);
+        } catch (IOException e) {
+            if (e instanceof NoCandidatesException) throw e;
+            if (e instanceof FileNotFoundException
+                    || e instanceof ResponseCodeException rce && rce.getResponseCode() == 404)
+                return RemoteAddon.BROKEN;
+            throw e;
+        }
+    }
+
+    @Override
+    public RemoteAddon.File getAddonFile(String projectId, String fileId) throws IOException {
         SEMAPHORE.acquireUninterruptibly();
         try {
-            Response<CurseAddon.LatestFile> response = withApiKey(HttpRequest.GET(String.format("%s/v1/mods/%s/files/%s", PREFIX, modId, fileId)))
+            Response<CurseAddon.LatestFile> response = withApiKey(HttpRequest.GET(String.format("%s/v1/mods/%s/files/%s", PREFIX, projectId, fileId)))
+                    .retry(DEFAULT_RETRY_COUNT)
                     .getJson(Response.typeOf(CurseAddon.LatestFile.class));
             return response.data().toVersion().file();
         } finally {
@@ -251,6 +309,7 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
         try {
             Response<List<CurseAddon.LatestFile>> response = withApiKey(HttpRequest.GET(PREFIX + "/v1/mods/" + id + "/files",
                     pair("pageSize", "10000")))
+                    .retry(DEFAULT_RETRY_COUNT)
                     .getJson(Response.typeOf(listTypeOf(CurseAddon.LatestFile.class)));
             return response.data().stream().map(CurseAddon.LatestFile::toVersion);
         } finally {
@@ -259,10 +318,53 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
     }
 
     @Override
+    public String getAddonChangelog(DownloadProvider downloadProvider, String addonId, String versionId) throws IOException {
+        SEMAPHORE.acquireUninterruptibly();
+        try {
+            Response<String> response = withApiKey(HttpRequest.GET(String.format("%s/v1/mods/%s/files/%s/changelog", PREFIX, addonId, versionId)))
+                    .retry(DEFAULT_RETRY_COUNT)
+                    .getJson(Response.typeOf(String.class));
+            return response.data();
+        } finally {
+            SEMAPHORE.release();
+        }
+    }
+
+    @Override
+    public @NotNull String getVersionPageUrl(RemoteAddon.Version version) throws IOException {
+        SEMAPHORE.acquireUninterruptibly();
+        try {
+            Response<CurseAddon> response = withApiKey(HttpRequest.GET(PREFIX + "/v1/mods/" + version.projectId()))
+                    .retry(DEFAULT_RETRY_COUNT)
+                    .getJson(Response.typeOf(CurseAddon.class));
+            var addon = response.data();
+            var classId = addon.classId();
+            var clazz = switch (classId) {
+                case SECTION_MOD -> "mc-mods";
+                case SECTION_RESOURCE_PACK -> "texture-packs";
+                case SECTION_WORLD -> "worlds";
+                case SECTION_MODPACK -> "modpacks";
+                case SECTION_DATAPACK -> "data-packs";
+                case SECTION_BUKKIT_PLUGIN -> "bukkit-plugins";
+                case SECTION_ADDONS -> "mc-addons";
+                case SECTION_CUSTOMIZATION -> "customization";
+                case SECTION_SHADER -> "shaders";
+                default ->
+                        throw new IllegalArgumentException("Unsupported CurseForge class id [%d]".formatted(classId));
+            };
+            return "%s/minecraft/%s/%s/files/%s".formatted(BASE, clazz, addon.slug(), version.versionId());
+        } finally {
+            SEMAPHORE.release();
+        }
+    }
+
+    @Override
     public Stream<RemoteAddonRepository.Category> getCategories() throws IOException {
+        if (type == null) throw new UnsupportedOperationException();
         SEMAPHORE.acquireUninterruptibly();
         try {
             Response<List<Category>> categories = withApiKey(HttpRequest.GET(PREFIX + "/v1/categories", pair("gameId", "432")))
+                    .retry(DEFAULT_RETRY_COUNT)
                     .getJson(Response.typeOf(listTypeOf(Category.class)));
             return reorganizeCategories(categories.data(), section).stream().map(Category::toCategory);
         } finally {
@@ -270,7 +372,7 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
         }
     }
 
-    private List<Category> reorganizeCategories(List<Category> categories, int rootId) {
+    private static List<Category> reorganizeCategories(List<Category> categories, int rootId) {
         List<Category> result = new ArrayList<>();
 
         Map<Integer, Category> categoryMap = new HashMap<>();
@@ -295,6 +397,7 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
     public static final int SECTION_BUKKIT_PLUGIN = 5;
     public static final int SECTION_MOD = 6;
     public static final int SECTION_RESOURCE_PACK = 12;
+    public static final int SECTION_DATAPACK = 6945;
     public static final int SECTION_WORLD = 17;
     public static final int SECTION_MODPACK = 4471;
     public static final int SECTION_SHADER = 6552;
@@ -304,12 +407,26 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
     public static final int SECTION_UNKNOWN2 = 4979;
     public static final int SECTION_UNKNOWN3 = 4984;
 
-    public static final CurseForgeRemoteAddonRepository MODS = new CurseForgeRemoteAddonRepository(RemoteAddonRepository.Type.MOD, SECTION_MOD);
-    public static final CurseForgeRemoteAddonRepository MODPACKS = new CurseForgeRemoteAddonRepository(RemoteAddonRepository.Type.MODPACK, SECTION_MODPACK);
-    public static final CurseForgeRemoteAddonRepository RESOURCE_PACKS = new CurseForgeRemoteAddonRepository(RemoteAddonRepository.Type.RESOURCE_PACK, SECTION_RESOURCE_PACK);
-    public static final CurseForgeRemoteAddonRepository WORLDS = new CurseForgeRemoteAddonRepository(RemoteAddonRepository.Type.WORLD, SECTION_WORLD);
-    public static final CurseForgeRemoteAddonRepository CUSTOMIZATIONS = new CurseForgeRemoteAddonRepository(RemoteAddonRepository.Type.CUSTOMIZATION, SECTION_CUSTOMIZATION);
-    public static final CurseForgeRemoteAddonRepository SHADERS = new CurseForgeRemoteAddonRepository(RemoteAddonRepository.Type.SHADER_PACK, SECTION_SHADER);
+    public static final CurseForgeRemoteAddonRepository COMMON = new CurseForgeRemoteAddonRepository();
+    public static final CurseForgeRemoteAddonRepository MODS = new CurseForgeRemoteAddonRepository(SECTION_MOD);
+    public static final CurseForgeRemoteAddonRepository MODPACKS = new CurseForgeRemoteAddonRepository(SECTION_MODPACK);
+    public static final CurseForgeRemoteAddonRepository RESOURCE_PACKS = new CurseForgeRemoteAddonRepository(SECTION_RESOURCE_PACK);
+    public static final CurseForgeRemoteAddonRepository WORLDS = new CurseForgeRemoteAddonRepository(SECTION_WORLD);
+    public static final CurseForgeRemoteAddonRepository CUSTOMIZATIONS = new CurseForgeRemoteAddonRepository(SECTION_CUSTOMIZATION);
+    public static final CurseForgeRemoteAddonRepository SHADERS = new CurseForgeRemoteAddonRepository(SECTION_SHADER);
+
+    @Nullable
+    private static RemoteAddon.Type toAddonType(int classId) {
+        return switch (classId) {
+            case SECTION_MODPACK -> RemoteAddon.Type.MODPACK;
+            case SECTION_RESOURCE_PACK -> RemoteAddon.Type.RESOURCE_PACK;
+            case SECTION_WORLD -> RemoteAddon.Type.WORLD;
+            case SECTION_CUSTOMIZATION -> RemoteAddon.Type.CUSTOMIZATION;
+            case SECTION_SHADER -> RemoteAddon.Type.SHADER_PACK;
+            case SECTION_MOD -> RemoteAddon.Type.MOD;
+            default -> null;
+        };
+    }
 
     public record Pagination(int index, int pageSize, int resultCount, int totalCount) {
     }
@@ -329,14 +446,14 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
     }
 
     /**
-     * @see <a href="https://docs.curseforge.com/#tocS_FingerprintsMatchesResult">Schema</a>
+     * @see <a href="https://docs.curseforge.com/rest-api/#tocS_FingerprintsMatchesResult">Schema</a>
      */
     private record FingerprintMatchesResult(boolean isCacheBuilt, List<FingerprintMatch> exactMatches,
                                             List<Long> exactFingerprints) {
     }
 
     /**
-     * @see <a href="https://docs.curseforge.com/#tocS_FingerprintMatch">Schema</a>
+     * @see <a href="https://docs.curseforge.com/rest-api/#tocS_FingerprintMatch">Schema</a>
      */
     private record FingerprintMatch(int id, CurseAddon.LatestFile file, List<CurseAddon.LatestFile> latestFiles) {
     }
@@ -350,7 +467,7 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
                              List<LatestFile> latestFiles,
                              List<LatestFileIndex> latestFileIndices, Instant dateCreated, Instant dateModified,
                              Instant dateReleased, boolean allowModDistribution, int gamePopularityRank,
-                             boolean isAvailable, int thumbsUpCount) implements RemoteAddon.IMod {
+                             boolean isAvailable, int thumbsUpCount) implements RemoteAddon.IAddon {
         public static final Map<Integer, RemoteAddon.DependencyType> RELATION_TYPE = mapOf(
                 pair(1, RemoteAddon.DependencyType.EMBEDDED),
                 pair(2, RemoteAddon.DependencyType.OPTIONAL),
@@ -361,7 +478,7 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
         );
 
         @Override
-        public List<RemoteAddon> loadDependencies(RemoteAddonRepository modRepository, DownloadProvider downloadProvider) throws IOException {
+        public List<RemoteAddon> loadDependencies(RemoteAddonRepository repo, DownloadProvider downloadProvider) throws IOException {
             Set<Integer> dependencies = latestFiles.stream()
                     .flatMap(latestFile -> latestFile.dependencies().stream())
                     .filter(dep -> dep.relationType() == 3)
@@ -369,17 +486,17 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
                     .collect(Collectors.toSet());
             List<RemoteAddon> mods = new ArrayList<>();
             for (int dependencyId : dependencies) {
-                mods.add(modRepository.getModById(downloadProvider, Integer.toString(dependencyId)));
+                mods.add(repo.getAddonById(downloadProvider, Integer.toString(dependencyId)));
             }
             return mods;
         }
 
         @Override
-        public Stream<RemoteAddon.Version> loadVersions(RemoteAddonRepository modRepository, DownloadProvider downloadProvider) throws IOException {
-            return modRepository.getRemoteVersionsById(downloadProvider, Integer.toString(id));
+        public Stream<RemoteAddon.Version> loadVersions(RemoteAddonRepository repo, DownloadProvider downloadProvider) throws IOException {
+            return repo.getRemoteVersionsById(downloadProvider, Integer.toString(id));
         }
 
-        public RemoteAddon toMod(Type type) {
+        public RemoteAddon toAddon() {
             String iconUrl = "";
             if (logo != null) {
                 if (StringUtils.isNotBlank(logo.thumbnailUrl()))
@@ -397,7 +514,7 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
                     links.websiteUrl,
                     iconUrl,
                     this,
-                    type
+                    toAddonType(classId)
             );
         }
 
@@ -426,14 +543,14 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
         }
 
         /**
-         * @see <a href="https://docs.curseforge.com/#schemafilehash">Schema</a>
+         * @see <a href="https://docs.curseforge.com/rest-api/#tocS_FileHash">Schema</a>
          */
         @Immutable
         public record LatestFileHash(String value, int algo) {
         }
 
         /**
-         * @see <a href="https://docs.curseforge.com/#tocS_File">Schema</a>
+         * @see <a href="https://docs.curseforge.com/rest-api/#tocS_File">Schema</a>
          */
         @Immutable
         public record LatestFile(int id, int gameId, int modId, boolean isAvailable, String displayName,
@@ -454,7 +571,7 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
             }
 
             @Override
-            public RemoteAddon.Source getType() {
+            public RemoteAddon.Source getSource() {
                 return RemoteAddon.Source.CURSEFORGE;
             }
 
@@ -466,35 +583,48 @@ public final class CurseForgeRemoteAddonRepository implements RemoteAddonReposit
                     default -> RemoteAddon.VersionType.Release;
                 };
 
+                Map<String, String> knownHashes;
+                if (hashes != null) {
+                    knownHashes = new HashMap<>();
+                    for (LatestFileHash hash : hashes) {
+                        if (hash.value != null) {
+                            switch (hash.algo) {
+                                case 1 -> knownHashes.put("sha1", hash.value);
+                                case 2 -> knownHashes.put("md5", hash.value);
+                            }
+                        }
+                    }
+                    knownHashes = Map.copyOf(knownHashes);
+                } else {
+                    knownHashes = Map.of();
+                }
+
                 return new RemoteAddon.Version(
                         this,
-                        Integer.toString(modId),
+                        Integer.toString(id()),
+                        Integer.toString(modId()),
                         displayName(),
                         fileName(),
-                        null,
                         fileDate(),
                         versionType,
-                        new RemoteAddon.File(Collections.emptyMap(), downloadUrl(), fileName()),
+                        new RemoteAddon.File(knownHashes, downloadUrl(), fileName()),
                         dependencies.stream().map(dependency -> {
                             if (!RELATION_TYPE.containsKey(dependency.relationType())) {
                                 throw new IllegalStateException("Broken datas.");
                             }
-                            return RemoteAddon.Dependency.ofGeneral(RELATION_TYPE.get(dependency.relationType()), MODS, Integer.toString(dependency.modId()));
+                            return RemoteAddon.Dependency.ofGeneral(RELATION_TYPE.get(dependency.relationType()), RemoteAddon.Source.CURSEFORGE, Integer.toString(dependency.modId()));
                         }).distinct().filter(Objects::nonNull).collect(Collectors.toList()),
                         gameVersions.stream().filter(GameVersionNumber::isKnown).toList(),
-                        gameVersions.stream().flatMap(version -> {
-                            if ("fabric".equalsIgnoreCase(version)) return Stream.of(ModLoaderType.FABRIC);
-                            else if ("forge".equalsIgnoreCase(version)) return Stream.of(ModLoaderType.FORGE);
-                            else if ("quilt".equalsIgnoreCase(version)) return Stream.of(ModLoaderType.QUILT);
-                            else if ("neoforge".equalsIgnoreCase(version)) return Stream.of(ModLoaderType.NEO_FORGE);
-                            else return Stream.empty();
-                        }).collect(Collectors.toList())
+                        gameVersions.stream()
+                                .filter(AddonLoader::mightBeLoader)
+                                .map(AddonLoader::of)
+                                .toList()
                 );
             }
         }
 
         /**
-         * @see <a href="https://docs.curseforge.com/#tocS_FileIndex">Schema</a>
+         * @see <a href="https://docs.curseforge.com/rest-api/#tocS_FileIndex">Schema</a>
          */
         @Immutable
         public record LatestFileIndex(String gameVersion, int fileId, String filename, int releaseType,
